--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -27,3 +27,15 @@
   margin-top: 50px;
   color: #333;
 }
+
+.kortele {
+  margin: 1rem auto;
+  width: 80%;
+  border: 1px solid black;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+span {
+  color: blue;
+}
