--- a/Task 3/style.css
+++ b/Task 3/style.css
@@ -61,12 +61,20 @@
 }
 
 .kortele {
-  display: block;
-  width: 90%;
-  margin: 1rem auto;
-  padding: 2rem;
-  height: 5rem;
+  display: inline-block;
+  width: 10rem;
+  margin: 0.5rem;
+  padding: 0.3rem;
+  height: 5.2rem;
   border: 1px solid black;
   border-radius: 5px;
+  text-align: center;
+}
+
+img {
+  height: 50px;
+}
+
+#output {
   text-align: center;
 }
