2 uzduoty sutvarkytas rezultato atvaizdavimas

--- a/Task 2/style.css
+++ b/Task 2/style.css
@@ -41,7 +41,7 @@
 
 #btn__state {
   width: 25%;
-  padding: 15px 25px;
+  padding: 15px 0;
   background-color: rgb(59, 59, 59);
   border: #222;
   color: #fff;
