--- a/Task 3/style.css
+++ b/Task 3/style.css
@@ -70,6 +70,7 @@
   border-radius: 5px;
   text-align: center;
   background-color: rgb(219, 247, 194);
+  box-shadow: 2px 2px black;
 }
 
 .kortele:hover {
