--- a/Task 4/style.css
+++ b/Task 4/style.css
@@ -34,6 +34,7 @@
   border: 1px solid black;
   padding: 1rem;
   border-radius: 5px;
+  box-shadow: 2px 2px rgb(71, 128, 118);
 }
 
 .kortele:hover {
@@ -42,6 +43,12 @@
   transition: 0.2s;
 }
 
-span {
+#sp {
   color: blue;
 }
+
+#size {
+  font-size: x-large;
+  font-weight: bold;
+}
+
